--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gatsby-plugin-google-analytics": "^4.11.0",
     "gatsby-plugin-image": "^2.11.1",
     "gatsby-plugin-manifest": "^4.11.1",
+    "gatsby-plugin-netlify-cms": "^6.11.0",
     "gatsby-plugin-offline": "^5.11.1",
     "gatsby-plugin-react-helmet": "^5.11.0",
     "gatsby-plugin-sharp": "^4.11.1",
@@ -22,9 +23,11 @@
     "gatsby-remark-prismjs": "^6.11.0",
     "gatsby-remark-responsive-iframe": "^5.11.0",
     "gatsby-remark-smartypants": "^5.11.0",
+    "gatsby-source-contentful": "^7.9.1",
     "gatsby-source-filesystem": "^4.11.1",
     "gatsby-transformer-remark": "^5.11.1",
     "gatsby-transformer-sharp": "^4.11.0",
+    "netlify-cms-app": "^2.15.70",
     "prismjs": "^1.27.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
